[project]
name = "file-merger-pro"
version = "1.0.0"
description = "Merge 30-40 files with similar columns into one unified dataset"
requires-python = ">=3.9,<3.13"
dependencies = [
    "Flask==2.3.3",
    "pandas==2.1.1",
    "numpy==1.24.3",
    "openpyxl==3.1.2",
    "Werkzeug==2.3.7",
    "python-dotenv==1.0.0"
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
